<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DailyPlay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="check_box_songs_by_amount">Download songs by amount</string>
    <string name="text_number_songs_to_download">Number of songs to download:</string>
    <string name="text_length_of_playlist">Length of playlist:</string>
    <string name="check_box_songs_by_time">Download songs by time</string>
    <string name="show_notification">Show Notifications</string>
    <string name="keep_old_playlist">Keep old DailyPlay lists\n(old songs won\'t be removed)</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="info_title">Welcome to DailyPlay!</string>
    <string name="empty_list">You haven\'t downloaded a DailyPlay list yet.  Wait till tomorrow morning, and check back to see your new list of music.</string>
    <string name="loading_list">Loading your DailyPlay list...</string>

</resources>
