<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_margin="@dimen/activity_horizontal_margin"
              android:layout_height="match_parent">

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_box_songs_by_amount"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/download_by_songs"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_number_songs_to_download"
            android:layout_weight="0.2"
            android:id="@+id/textView"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_weight="0.8"
            android:id="@+id/number_of_songs"/>
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_box_songs_by_time"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/download_by_time"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_length_of_playlist"
            android:layout_weight="0.2"
            android:id="@+id/textView2"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:layout_weight="0.8"
            android:id="@+id/length_of_playlist"/>

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/show_notification"
        android:id="@+id/show_notifications"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keep_old_playlist"
        android:id="@+id/keep_dailyplay_lists"/>

</LinearLayout>